Fixed spacing of social media and nav buttons for large screen.

--- a/css/general.css
+++ b/css/general.css
@@ -250,8 +250,8 @@ h3 {
 @media only screen and (min-width: 38em) {
   
   .header {
-  text-align: center;
-  }
+    text-align: center;
+    }
   
   .nav-label {
     cursor: pointer;
@@ -269,12 +269,14 @@ h3 {
   }
 }
 
-}
-
 @media only screen and (min-width: 60em) {
   
+  .headername {
+    text-align: center;
+  }
+  
   .header {
-  text-align: left;
+    text-align: left;
   }
   
   .nav-label {
@@ -288,7 +290,7 @@ h3 {
     list-style-type: none;
     text-align: left;
     padding: 0;
-    top: 5rem;
+    margin-top: 1rem;
   }
   
   .icon {
@@ -296,6 +298,40 @@ h3 {
     width: 1.5rem;
     height: 1.5rem;
     padding-bottom: 0; 
-    top: 2rem;
+  }
+  
+  .nav-label {
+    cursor: pointer;
+    width: 30px;
+    z-index: 1;
+    display: inline-block;
+  }
+
+  .nav-open,
+  .nav-close {
+    display: block;
+    width: 100%;
+    visibility: hidden;
+  } 
+
+  .nav-close {
+    display: none;
+  }
+  
+  .nav {
+    margin: 0 3rem 0 3rem;
+    padding: 0;
+    list-style-type: none;
+    display: inline-block;
+    position: relative;
+    left: -4.8rem;
+  }
+
+  .nav-check:checked ~ .nav-label .nav-open {
+    display: none;
+  }
+
+  .nav-check:checked ~ .nav-label .nav-close {
+    display: block;
   }
 }
